 * Optimised page URL generation by caching site paths in the request scope (Tobias McNulty, Matt Westcott)
 * Fix: Unauthenticated AJAX requests to admin views now return 403 rather than redirecting to the login page (Karl Hobley)
 * Fix: `TableBlock` options `afterChange`, `afterCreateCol`, `afterCreateRow`, `afterRemoveCol`, `afterRemoveRow` and `contextMenu` can now be overridden (Loic Teixeira)


1.10 (03.05.2017)
~~~~~~~~~~~~~~~~~

 * Added PostgreSQL search engine (Bertrand Bordage, Jaap Roes, Arne de Laat, Ramon de Jezus)
 * Django 1.11 support (Tim Graham, Matt Westcott, Mikalai Radchuk, Bertrand Bordage)
 * Dropped Django 1.9 and Python 3.3 support; note that Django 1.8.x is still supported
 * Added user-preferred admin language along with `WAGTAILADMIN_PERMITTED_LANGUAGES` (Daniel Chimeno)
 * Added `WAGTAIL_AUTO_UPDATE_PREVIEW` setting that when set to `True`, allows the preview window to be refreshed when changes have been made in the editor (Bertrand Bordage)
 * Dropped support for generating static sites using django-medusa
 * Use minified versions of jQuery and jQuery UI in the admin. Total savings without compression 371 KB (Tom Dyson)
 * Hooks can now specify the order in which they are run (Gagaro)
 * Added a `submit_buttons` block to login template (Gagaro)
 * Added `construct_image_chooser_queryset`, `construct_document_chooser_queryset` and `construct_page_chooser_queryset` hooks (Gagaro)
 * The homepage created in the project template is now titled "Home" rather than "Homepage" (Karl Hobley)
 * Signal receivers for custom `Image` and `Rendition` models are connected automatically (Mike Dingjan)
 * `PageChooserBlock` can now accept a list/tuple of page models as `target_model` (Mikalai Radchuk)
 * Styling tweaks for the ModelAdmin's `IndexView` to be more inline with the Wagtail styleguide (Andy Babic)
 * Added `.nvmrc` to the project root for Node versioning support (Janneke Janssen)